# goose-google-calendar-extension

./: .gitignore  README.md  goose_plugin_example.py  pyproject.toml  requirements.txt
