[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goose-plugin-example"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A Goose plugin for Google Calendar integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "goose-ai",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.6",
    "python-dateutil>=2.8.2"
]

[project.entry-points.goose]
calendar = "goose_plugin_example:CalendarExtension"